--- a/h.html
+++ b/h.html
@@ -9,6 +9,7 @@
 <body>
     <h1 id="etty">hello world</h1>
     <h2>i am etty</h2>
+    <img src="./04_176.jpg">
 </body>
 <script src="./h.js"></script>
 </html>
